[package]
name = "challonge"
version = "0.5.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]

description = "Client library for the Challonge REST API"
readme = "README.md"
license = "MIT"
keywords = ["game", "challonge", "tourney", "tournament", "api", "system"]

repository = "https://github.com/vityafx/challonge-rs"
documentation = "https://docs.rs/challonge-rs"

[dependencies]
reqwest = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.3"
