[package]
name = "challonge"
version = "0.5.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]

description = "Client library for the Challonge REST API"
readme = "README.md"
license = "MIT"
keywords = ["game", "challonge", "tournament", "api", "system"]

repository = "https://github.com/vityafx/challonge-rs"
documentation = "https://docs.rs/challonge/"

[dependencies]
base64 = "0.13"
serde_json = "0.7"
chrono = "0.4"
log = "0.4"

[dependencies.reqwest]
optional = true
version = "0.11"
features = ["blocking", "rustls-tls"]

[features]
default = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
